Se agrega CSS al contenido HTML

--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
     <meta name="keywords" content="granja avicola, grajan chinandega, granja"> 
     <meta name="description" content="Sitio web oficial de la compañia avicola la Chinandegana" />
     <title>Granja Avicola Chdga.</title>
+    <link rel="stylesheet"  href="estilos.css">
+
 </head>
 <body>
-     <header>Granja avicola Chinandegana</header>
-      <img src="Recursos/granja2.jpg" >
-     <nav>
+   
+   <div class="agrupador">
+    <header class="cabezera">Granja avicola Chinandegana</header> 
+     <nav class="menu">
          <ul>
              <li>Principal</li>
              <li>Ayuda</li>
              <li>Contacto</li>
          </ul>
      </nav>
-   <section>
-       
-       <article>
+   <section class="seccion">       
+       <article class="articulo1" >
            <HEader>Articulo #1</HEader>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eius molestias culpa pariatur placeat. Est, modi, autem, magni odio delectus sed cupiditate eos aperiam ut eligendi commodi harum nostrum vero!</p>
-           <footer>Comentarios :5</footer>
+           <img src="Recursos/granja2.jpg" >
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eius molestias culpa pariatur placeat. Est, modi, autem, magni odio delectus sed cupiditate eos aperiam ut eligendi commodi harum nostrum vero!
+             
+           </p>
+           <footer>Comentarios: 5</footer>
            <a href="https://www.google.com">Ir a Google</a>
            <br>
            <br>
@@ -32,12 +37,17 @@
        <article>
         <HEader>Articulo #2</HEader>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eius molestias culpa pariatur placeat. Est, modi, autem, magni odio delectus sed cupiditate eos aperiam ut eligendi commodi harum nostrum vero!</p>
-        <footer>Comentarios :0</footer>
+        <footer>Comentarios: 0</footer>
         <br>
     </article>
    </section>
-   <aside>Menssaje #1</aside>
-   <aside>Menssaje #2</aside>
-   <footer>Derechos reservados granja avicola la Chinandegana</footer>
+   <aside class="columna">
+        <blockquote cite="https://www.google.com">Archivo</blockquote>
+        <blockquote cite="https://www.google.com">Acerca de</blockquote>
+
+   </aside>
+   
+   <footer class="pie" >Derechos reservados granja avicola la Chinandegana</footer>
+</div>
 </body>
 </html>
